# vxm

./: CMakeLists.txt  README.md
.github/workflows/: build.yml
scripts/: build-deb.sh  install-build-deps.sh
src/: Config.h  DeviceManager.cpp  DeviceManager.h  HardwareDetection.cpp  HardwareDetection.h  InputManager.cpp  InputManager.h  ProfileManager.cpp  ProfileManager.h  VirtualMachine.cpp  VirtualMachine.h  main.cpp
